Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/mailcheck-dev/mailcheck-dev-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcheck-dev-redis
  namespace: mailcheck-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailcheck-dev-redis
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mailcheck-dev-redis
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: mailcheck-dev-redis
        image: "redis:5.0.5"
        args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - mountPath: "/data"
          name: mailcheck-dev-redis
      volumes:
        - name: mailcheck-dev-redis
          persistentVolumeClaim:
            claimName: mailcheck-dev-redis
      hostname: mailcheck-dev-redis
---
apiVersion: v1
kind: Service
metadata:
  name: mailcheck-dev-redis
  namespace: mailcheck-dev
spec:
  ports:
  - port: 6379
  selector:
    app: mailcheck-dev-redis
---
apiVersion: v1
kind: Service
metadata:
  name: mailcheck-dev-redis-loadbalancer
  namespace: mailcheck-dev
spec:
  type: LoadBalancer
  ports:
  - port: 6379
  selector:
    app: mailcheck-dev-redis
